--- a/_data/pageconfig/solutions.yml
+++ b/_data/pageconfig/solutions.yml
@@ -473,7 +473,7 @@ pages:
       <p>Choose AxOps&#8482; for your Salesforce Development needs, and rest assured that our commitment to excellence, deep industry knowledge, and client-centric approach will propel your organisation towards success. Let us help you transform your Salesforce journey and create a lasting impact on your business operations.</p>
 
   blockchain-development.md:
-    title: Blockchain Development
+    title: Blockchain Solutions
     tagline: "Trust, Traceability & Transparency with AxOps&#8482; Blockchain Solutions"
     main_image: /assets/img/illustrations/custom/solutions-blockchain-development.jpg
     outcome_image: /assets/img/icons/lineal/target.svg
