updated available solutions in nav + yaml

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -58,7 +58,7 @@
         -
           name: Blockchain Solutions
           url: /blockchain-solutions
-          enabled: true
+          enabled: false
         -
           name: Salesforce Development
           url: /salesforce-development
