--- a/_data/pageconfig/our-technology-consulting-solutions.yml
+++ b/_data/pageconfig/our-technology-consulting-solutions.yml
@@ -12,7 +12,7 @@ members:
     role: Ask, and consider it done &#127919;
     enabled: true
   -
-    name: Cloud Engineering
+    name: Application Engineering
     image_src: &site_url /assets/img/illustrations/custom/cloud-engineering.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/cloud-engineering.jpg 2x
     url: &site_url /technologies/application-engineering
@@ -22,10 +22,30 @@ members:
     name: Business Analytics
     image_src: &site_url /assets/img/illustrations/custom/solutions-business-analytics.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-business-analytics.jpg 2x
-    url: &site_url /solutions/technology-consulting/business-analytics
+    url: &site_url /technologies/business-analytics
     role: Upskill with confidence &#128588;
-    enabled: false
-  
+    enabled: true
+  -
+    name: CRM Data Integrations
+    image_src: &site_url /assets/img/illustrations/custom/solutions-crm-data-integrations.jpg
+    image_srcset: &site_url /assets/img/illustrations/custom/solutions-crm-data-integrations.jpg 2x
+    url: &site_url /solutions/technology-consulting/crm-data-integrations
+    role: How we work with clients &#129309;
+    enabled: true
+  -
+    name: Data Management
+    image_src: &site_url /assets/img/illustrations/custom/solutions-hubspot-crm-optimisation.jpg
+    image_srcset: &site_url /assets/img/illustrations/custom/solutions-hubspot-crm-optimisation.jpg 2x
+    url: &site_url /technologies/data-management
+    role: How we work with clients &#129309;
+    enabled: true
+    
+
+
+
+
+
+
   -
     name: CRM Data Migrations
     image_src: &site_url /assets/img/illustrations/custom/solutions-crm-data-migrations.jpg
@@ -34,13 +54,7 @@ members:
     role: Leverage our experience &#129417;
     enabled: false
   
-  -
-    name: CRM Data Integrations
-    image_src: &site_url /assets/img/illustrations/custom/solutions-crm-data-integrations.jpg
-    image_srcset: &site_url /assets/img/illustrations/custom/solutions-crm-data-integrations.jpg 2x
-    url: &site_url /solutions/technology-consulting/crm-data-integrations
-    role: How we work with clients &#129309;
-    enabled: true
+  
 
   -
     name: Digital Transformation
