minor updates to content copy

--- a/_data/pageconfig/technologies.yml
+++ b/_data/pageconfig/technologies.yml
@@ -117,7 +117,7 @@ pages:
 
   technologies-application-engineering.md:
     title: Application Engineering
-    tagline: "Innovate with AxOps&#8482;: Engineer Applications with Confidence"
+    tagline: "Innovate with AxOps&#8482;: Build Solutions with Confidence"
 
     services:
       cloud-engineering:
